# llm-zoomcamp-playground

./: .gitignore  README.md  main.py  pyproject.toml
01-intro/: README.md  docker-compose.yaml  rag.ipynb
02-vector-search/: README.md  hybrid_search.ipynb  rag.ipynb  semantic_search.ipynb
03-evaluation/: README.md
0a-agents/: README.md  agent.ipynb
open-source-llm/: README.md
